samples/_failures_safe/1761288803_1299e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7abc0f1a.c: In function ‘main’:
./samples/SAFE/__tmp_7abc0f1a.c:189:5: error: expected declaration or statement at end of input
  189 |     printf("Initial state: IDLE\n");
      |     ^~~~~~
